--- a/style.css
+++ b/style.css
@@ -25,16 +25,9 @@ header img {
   width: 50px;
 }
 
-header select {
-  width: 100%;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+header input {
   padding: 0.5rem;
-  font-size: 1rem;
-  font-weight: bold;
-  color: #262626;
-  background-color: white;
-  cursor: pointer;
+  border-radius: 0.5rem;
 }
 
 .container {
